--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="item-title">Котлета мясная</div>
       <div class="item-price">220 ₸</div>
     </div>
-    <img src="img/kotleta-kur.jpg" alt="">
+    <img src="pics/WhatsApp Image 2025-11-26 at 14.35.18.jpeg" alt="">
   </div>
 
   <div class="item">
@@ -239,9 +239,9 @@
   <div class="item">
     <div class="item-info">
       <div class="item-title">Куриный ассорти</div>
-      <div class="item-price">3800 ₸</div>
+      <div class="item-price">3400 ₸</div>
     </div>
-    <img src="img/karbonara.jpg" alt="">
+    <img src="pics/WhatsApp Image 2025-11-26 at 14.35.17.jpeg" alt="">
   </div>
 
   <div class="item">
@@ -249,8 +249,23 @@
       <div class="item-title">Мясной ассорти</div>
       <div class="item-price">4200 ₸</div>
     </div>
-    <img src="img/steak.jpg" alt="">
+    <img src="pics/WhatsApp Image 2025-11-26 at 14.35.14.jpeg" alt="">
   </div>
+
+    <div class="item">
+    <div class="item-info">
+      <div class="item-title">Байтерек</div>
+      <div class="item-price">4200 ₸</div>
+    </div>
+    <img src="  <div class="item">
+    <div class="item-info">
+      <div class="item-title">Мясной ассорти</div>
+      <div class="item-price">12000 ₸</div>
+    </div>
+    <img src="pics/WhatsApp Image 2025-11-26 at 14.35.14.jpeg" alt="">
+  </div>" alt="">
+  </div>
+  
 </div>
 
 <!-- ====== Дополнительные услуги ====== -->
