--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="item-title">Рулет куриный</div>
       <div class="item-price">2800 ₸</div>
     </div>
-    <img src="img/rulet-kur.jpg" alt="">
+    <img src="pics/Рулет из куриной грудки с грибами и сыром.jpg" alt="">
   </div>
 
   <div class="item">
@@ -220,7 +220,7 @@
       <div class="item-title">Дунганский перец</div>
       <div class="item-price">8000 ₸ / кг</div>
     </div>
-    <img src="img/karbonara.jpg" alt="">
+    <img src="pics/sddefault.jpg" alt="">
   </div>
 
   <div class="item">
@@ -228,7 +228,7 @@
       <div class="item-title">Долма</div>
       <div class="item-price">330 ₸</div>
     </div>
-    <img src="img/steak.jpg" alt="">
+    <img src="pics/p_O.png" alt="">
   </div>
 </div>
 
@@ -260,6 +260,14 @@
     <img src="pics/WhatsApp Image 2025-11-26 at 14.35.23.jpeg" alt="">
   </div>
 
+  <div class="item">
+    <div class="item-info">
+      <div class="item-title">дракон</div>
+      <div class="item-price">12000 ₸</div>
+    </div>
+    <img src="pics/960e2e39-e10a-4242-b640-aea19ec5850c.jpg" alt="">
+  </div>
+
     
   
 </div>
@@ -273,7 +281,7 @@
       <div class="item-title">Выезд на приготовление блюд</div>
       <div class="item-price">Обговорная цена</div>
     </div>
-    <img src="img/karbonara.jpg" alt="">
+    <img src="pics/Кулинарный мастер-класс от шеф-повара нашего ресторана Фрида! http___rivieramaya_grandvelas.com_russian_.png" alt="">
   </div>
 
   <div class="item">
@@ -281,7 +289,7 @@
       <div class="item-title">Приготовление мясной продукции для мероприятия</div>
       <div class="item-price">Обговорная цена</div>
     </div>
-    <img src="img/steak.jpg" alt="">
+    <img src="pics/Assorted meat products including ham and sausages _ Premium Photo.jpg" alt="">
   </div>
 </div>
 
